--- a/force-app/main/default/classes/VariablesDataTypesOperators.cls
+++ b/force-app/main/default/classes/VariablesDataTypesOperators.cls
@@ -1,5 +1,5 @@
 //**
-* This is the VariablesDataTypesOperators class, part of the Developer Kickstart Module 1 curriculum 
+/* This is the VariablesDataTypesOperators class, part of the Developer Kickstart Module 1 curriculum 
 * at Cloud Code Academy. This class serves as an introduction to the basic elements of Apex programming 
 * including variables, data types, and operators.
 * 
@@ -32,8 +32,14 @@ public with sharing class VariablesDataTypesOperators {
     * @return The sum of the two numbers, or null if either number is null.
     */
    public static Integer addition(Integer a, Integer b) {  
-       return null; // Replace null with the variable you used to store the result
-   }
+    if (a != null && b != null)
+    {
+        integer total = a + b;
+        return total;
+    }
+        return null;
+}// Replace null with the variable you used to store the result
+   
 
    /**
     * Question 2
@@ -44,7 +50,9 @@ public with sharing class VariablesDataTypesOperators {
     * @return The difference between the two numbers.
     */
    public static Integer subtraction(Integer a, Integer b) {
-       return null; // Replace null with the variable you used to store the result
+    Integer total = a - b;
+    return total;
+// Replace null with the variable you used to store the result
    }
 
    /**
@@ -56,7 +64,9 @@ public with sharing class VariablesDataTypesOperators {
     * @return The product of the two numbers.
     */
    public static Integer multiplication(Integer a, Integer b) {
-       return null; // Replace null with the variable you used to store the result
+    integer total = a * b;
+    return total;
+// Replace null with the variable you used to store the result
    }
 
    /**
@@ -69,8 +79,16 @@ public with sharing class VariablesDataTypesOperators {
     * @return The quotient of the division, or 0 if the denominator is zero.
     */
    public static Decimal division(Integer a, Integer b) {
-       return null; // Replace null with the variable you used to store the result
+    if (b == 0)
+    {
+        return 0;
+    }
+    Decimal total = a / b;
+    return total;
+    
+// Replace null with the variable you used to store the result
    }
+
 
    /**
     * Question 5
@@ -83,8 +101,18 @@ public with sharing class VariablesDataTypesOperators {
     * @return True if the number is even, False otherwise.
     */
    public static Boolean isEven(Integer num) {
-       return null; // Replace null with the variable you used to store the result
-   }
+    Integer result = math.mod(num, 2);
+    if (result == 0) 
+    {
+        return true;   
+    }
+    else
+    {
+       return false;  
+    }
+    }
+// Replace null with the variable you used to store the result
+
 
    /**
     * Question 6
@@ -94,8 +122,19 @@ public with sharing class VariablesDataTypesOperators {
     * @return true if the number is positive, false otherwise.
     */
    public static Boolean isPositive(Integer num) {
-       return null; // Replace null with the variable you used to store the result
-   }
+        if (num == null || num <= 0)
+        {
+            return false;
+        }
+        else 
+        {
+            return true;
+        }
+    }
+
+ 
+// Replace null with the variable you used to store the result
+   
 
    /**
     * Question 7
@@ -105,8 +144,12 @@ public with sharing class VariablesDataTypesOperators {
     * @param str2 The second string.
     * @return The concatenated string.
     */
-   public static String concatenateStrings(String str1, String str2) {
-       return null; // Replace null with the variable you used to store the result
+    public static String concatenateStrings(String str1, String str2) {
+        
+        String result = str1 + str2;
+        return result;
+   
+// Replace null with the variable you used to store the result
    }
 
    /**
@@ -120,8 +163,9 @@ public with sharing class VariablesDataTypesOperators {
     * @param endingPunctuation The punctuation to end the sentence, e.g., '.', '!', '?'
     * @return The complete sentence as a single String.
     */
-   public static String createSentence(String noun, String verb, String endingPunctuation) {
-       return null; // Replace null with the variable you used to store the result
+   public static String createSentence(String noun, String verb, String endingPunctuation){
+        String result = 'The ' + noun + ' is ' + verb + endingPunctuation;
+        return result; // Replace null with the variable you used to store the result
    }
 
    /**
@@ -133,10 +177,20 @@ public with sharing class VariablesDataTypesOperators {
     * @param dt The date to check.
     * @return True if the date is in the past, False otherwise.
     */
-   public static Boolean isDateInPast(Date dt) {
-       return null; // Replace null with the variable you used to store the result
-   }
-
+    public static Boolean isDateInPast(Date dt) {
+        //dt = Date.newInstance(2016, 6, 24);
+        Date today = Date.today();
+        if (dt < today)
+        {
+            return true;
+        }
+        else 
+        {
+            return false;
+        }
+        }
+        // Replace null with the variable you used to store the result
+   
    /**
     * Question 10
     * Checks if a date is today or in the future.
@@ -147,7 +201,15 @@ public with sharing class VariablesDataTypesOperators {
     * @return True if the date is today or in the future, False otherwise.
     */
    public static Boolean isDateTodayOrFuture(Date dt) {
-       return null; // Replace null with the variable you used to store the result
+    Date today = Date.today();
+    if (dt == today || dt > today)
+    {
+       return true; // Replace null with the variable you used to store the result
+    }
+    else
+    {
+        return false;
+    }
    }
 
    /**
@@ -160,9 +222,12 @@ public with sharing class VariablesDataTypesOperators {
     * @return The number of milliseconds equivalent to the given number of minutes.
     */
    public static Integer convertMinutesToMilliseconds(Integer minutes) {
-       Integer MILLISECONDS_PER_MINUTE = null; // Make this value a constant
-       Integer milliseconds;
-       return null; // Replace null with the variable you used to store the result
+    
+        Integer MILLISECONDS_PER_MINUTE = 60000; // Make this value a constant
+        Integer milliseconds;
+        Integer m = minutes; 
+        milliseconds = (m * MILLISECONDS_PER_MINUTE);
+        return milliseconds; // Replace null with the variable you used to store the result
    }    
 
    /**
@@ -176,7 +241,9 @@ public with sharing class VariablesDataTypesOperators {
     * @return The average of the three numbers.
     */
    public static Double averageOfThreeNumbers(Integer a, Integer b, Integer c) {
-       return null; // Replace null with the variable you used to store the result
+      Double averageOfThreeNumbers = (a +  b + c)/3;
+      return averageOfThreeNumbers;
+        // Replace null with the variable you used to store the result
    }
 
    /**
@@ -191,10 +258,10 @@ public with sharing class VariablesDataTypesOperators {
     */
    public static Integer adjustOrderOfOperations1(Integer a, Integer b, Integer c) {
        // Add parentheses around the addition operation so that it is performed before multiplication
-       Integer result = a + b * c;
+       Integer result = (a + b) * c;
 
        // Return the result
-       return null; // Replace null with the variable you used to store the result
+       return result; // Replace null with the variable you used to store the result
    }
 
    /**
@@ -206,8 +273,8 @@ public with sharing class VariablesDataTypesOperators {
        // Add parentheses in the below expression to change the result.
        // The result of the expression as it is right now is 43. 
        // You should add parentheses so that the result of the expression becomes 8.
-       Integer answer = 48 - 15 + 5 * 2;
-       return null; // Replace null with the variable you used to store the result
+       Integer answer = 48 - ((15 + 5) * 2);
+       return answer; // Replace null with the variable you used to store the result
    }
 
    /**
@@ -226,9 +293,9 @@ public with sharing class VariablesDataTypesOperators {
     */
    public static Double complexOrderOfOperations(Integer a, Integer b, Integer c, Integer d, Integer e) {
        // Add parentheses around the multiplication and subtraction operations so that they are performed before division and addition
-       Double result = a * b - c / (Double) d + e;
+       Double result = (a * b - c) / (Double) d + e;
 
-       return null; // Replace null with the variable you used to store the result
+       return result; // Replace null with the variable you used to store the result
    }
 
    /**
@@ -242,8 +309,8 @@ public with sharing class VariablesDataTypesOperators {
        final Double SUBTRACT_FACTOR = 32.0;
        final Double MULTIPLY_FACTOR = 5.0;
        final Double DIVIDE_FACTOR = 9.0;
-   
-       return null; // Replace null with the variable you used to store the result
+       Double celsius = (fahrenheit - SUBTRACT_FACTOR) * MULTIPLY_FACTOR/DIVIDE_FACTOR;
+       return celsius; // Replace null with the variable you used to store the result
    }
 
    
@@ -263,7 +330,8 @@ public with sharing class VariablesDataTypesOperators {
 
        // Write the code for type casting the divisionResult to an Integer
        Integer roundedResult = null;
-       return null; // Replace null with the variable you used to store the result
+       Integer result = (Integer)Math.floor(a/b);
+       return result; // Replace null with the variable you used to store the result
    }
 
    /**
@@ -277,7 +345,8 @@ public with sharing class VariablesDataTypesOperators {
     */
    public static Decimal calculateWeeklyPaycheck(Decimal hourlyRate, Double numberOfHours) {
        // Calculate the weekly paycheck using the formula: rate multiplied by hours
-       return null; // Replace null with the variable you used to store the result
+       Decimal result = hourlyRate * numberOfHours;
+       return result; // Replace null with the variable you used to store the result
    }
 
    /**
@@ -291,7 +360,8 @@ public with sharing class VariablesDataTypesOperators {
     * @return A Decimal representing the monthly paycheck.
     */
    public static Decimal calculateMonthlyPaycheck(Decimal hourlyRate, Double numberOfHours) {
-       return null; // Replace null with the variable you used to store the result
+    Decimal result = hourlyRate * numberOfHours * 4;
+       return result; // Replace null with the variable you used to store the result
    }
 
    /**
@@ -305,6 +375,7 @@ public with sharing class VariablesDataTypesOperators {
     * @return The total cost after applying the sales tax.
     */
    public static Decimal calculateTotalCost(Decimal pricePerUnit, Integer numberOfUnits, Decimal salesTaxRate) {
-       return null; // Replace null with the variable you used to store the result
+    Decimal result = (pricePerUnit * numberOfUnits) * (1 + salesTaxRate);
+       return result; // Replace null with the variable you used to store the result
    }
 }
